slightly improve default base config

--- a/collectd.conf
+++ b/collectd.conf
@@ -1,3 +1,15 @@
+CollectInternalStats true
+
+WriteQueueLimitLow  5000
+WriteQueueLimitHigh 5000
+
+LoadPlugin syslog
+<Plugin syslog>
+	LogLevel info
+</Plugin>
+
+LoadPlugin unixsock
+
 <Include "/etc/collectd/collectd.conf.d">
 	Filter "*.conf"
 </Include>
