remove unix socket

--- a/collectd.conf
+++ b/collectd.conf
@@ -9,6 +9,9 @@ LoadPlugin syslog
 </Plugin>
 
 LoadPlugin unixsock
+<Plugin unixsock>
+	DeleteSocket true
+</Plugin>
 
 <Include "/etc/collectd/collectd.conf.d">
 	Filter "*.conf"
