--- a/collectd.conf
+++ b/collectd.conf
@@ -16,3 +16,15 @@ LoadPlugin unixsock
 <Include "/etc/collectd/collectd.conf.d">
 	Filter "*.conf"
 </Include>
+
+LoadPlugin write_http
+<Plugin write_http>
+  <Node prometheus>
+    URL "http://collectd.metrics.rancher.internal:9103/collectd-post"
+    Format JSON
+    StoreRates false
+    LowSpeedLimit 50
+    Timeout 2500
+    LogHttpError true
+  </Node>
+</Plugin>
