switch to using write_prometheus

--- a/collectd.conf
+++ b/collectd.conf
@@ -13,18 +13,8 @@ LoadPlugin unixsock
 	DeleteSocket true
 </Plugin>
 
+LoadPlugin write_prometheus
+
 <Include "/etc/collectd/collectd.conf.d">
 	Filter "*.conf"
 </Include>
-
-LoadPlugin write_http
-<Plugin write_http>
-  <Node prometheus>
-    URL "http://collectd.metrics.rancher.internal:9103/collectd-post"
-    Format JSON
-    StoreRates false
-    LowSpeedLimit 50
-    Timeout 2500
-    LogHttpError true
-  </Node>
-</Plugin>
