--- a/collectd.conf
+++ b/collectd.conf
@@ -11,6 +11,7 @@ LoadPlugin syslog
 LoadPlugin unixsock
 <Plugin unixsock>
 	DeleteSocket true
+	SocketGroup "nogroup"
 </Plugin>
 
 LoadPlugin write_prometheus
