switch to log_logstash and logging to stdout

--- a/collectd.conf
+++ b/collectd.conf
@@ -3,9 +3,10 @@ CollectInternalStats true
 WriteQueueLimitLow  5000
 WriteQueueLimitHigh 5000
 
-LoadPlugin syslog
-<Plugin syslog>
+LoadPlugin log_logstash
+<Plugin log_logstash>
 	LogLevel info
+	File stdout
 </Plugin>
 
 LoadPlugin unixsock
